domasna test das

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     
+<input type="color" id="boja">
+<input type="FontSize" id="fontsize">
+<input type="text" id="tekst">
+<button id="naslov">Click to create titles</button>
+
 </body>
 </html>
